--- a/css/styles.css
+++ b/css/styles.css
@@ -775,25 +775,25 @@ button {
 /* FOOTER */
 
 .footer-copyright {
-    padding: 96px 0;
     background-color: #2e2f42;
+    padding: 96px 0;
 }
-
 
 .container-footer {
     display: flex;
-    flex-direction: column;
-}
-
-.parent-descr {
-    margin-bottom: 72px;
-    text-align: center;
-
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 72px;
+    justify-content: center;
+    /* верхнее значение центрирует */
 }
 
 .last-logo {
     display: inline-block;
     margin-bottom: 16px;
+    text-align: center;
+    width: 288px;
+    /* верхнее значение центрирует */
 }
 
 .logo-footer {
@@ -805,13 +805,17 @@ button {
     line-height: 150%;
     color: #f4f4fd;
     letter-spacing: 0.02em;
-    width: 288px;
-    text-align: start;
+    /* проверить ширину  */
 }
 
 .parent-soc-media {
-    margin-bottom: 72px;
     text-align: center;
+    /* верхнее значение центрирует */
+}
+
+.subscribe-wripper {
+    text-align: center;
+    /* верхнее значение центрирует */
 }
 
 .title-footer {
@@ -820,15 +824,15 @@ button {
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    text-align: center;
+
     margin-bottom: 16px;
+
 }
 
 .social-icon-footer {
     display: flex;
     align-items: center;
     gap: 16px;
-    justify-content: center;
 }
 
 .social-icon-footer .link-icon {
@@ -842,9 +846,9 @@ button {
 
 .subscribe {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
     gap: 16px;
+    justify-content: center;
 }
 
 .input-footer {
@@ -855,33 +859,24 @@ button {
     height: 40px;
     background: transparent;
     outline: none;
+    color: #ffffff;
     padding-left: 16px;
-    color: #ffffff;
-    opacity: 0.3;
 
     font-family: inherit;
     font-weight: 400;
     font-size: 12px;
     line-height: 200%;
     letter-spacing: 0.04em;
-}
-
-.input-footer::placeholder {
-    font-family: inherit;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 200%;
-    letter-spacing: 0.04em;
-}
-
-.input-footer::placeholder {
-    font-family: inherit;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 200%;
-    letter-spacing: 0.04em;
-    color: #ffffff;
     opacity: 0.6;
+}
+
+.input-footer::placeholder {
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 200%;
+    letter-spacing: 0.04em;
+    color: #ffffff;
 }
 
 .submit-footer {
@@ -924,29 +919,32 @@ button {
 
 @media screen and (min-width: 768px) {
     .container-footer {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+
+    .last-logo {
+        text-align: start;
     }
 
     .parent-descr {
-        margin-right: 24px;
-        text-align: start;
         width: 264px;
+        text-align: inherit;
     }
 
-    .title-footer {
-        text-align: start;
+    .parent-soc-media {
+        text-align: inherit;
+    }
+
+    .subscribe-wripper {
+        text-align: inherit;
     }
 
     .subscribe {
-        flex-direction: row;
         gap: 24px;
     }
 
     .input-footer {
         width: 264px;
     }
-
 }
