--- a/css/styles.css
+++ b/css/styles.css
@@ -115,11 +115,6 @@ button {
     align-items: center;
 }
 
-.nav-link,
-.contact {
-    display: none;
-}
-
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -137,6 +132,11 @@ button {
 
 .logo-studio {
     color: #2e2f42;
+}
+
+.nav-link,
+.contact {
+    display: none;
 }
 
 .sandwich-btn {
@@ -189,6 +189,23 @@ button {
         color: #404bbf;
     }
 
+    .underline {
+        position: relative;
+        color: #404bbf;
+    }
+
+    .underline::after {
+        color: #404bbf;
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 4px;
+        bottom: -1px;
+        left: 0;
+        border-radius: 2px;
+        background-color: #404bbf;
+    }
+
     .contact {
         font-style: normal;
         display: block;
@@ -214,24 +231,6 @@ button {
     .contact-mail-phone:focus {
         color: #404bbf;
     }
-
-    .underline {
-        position: relative;
-        color: #404bbf;
-    }
-
-    .underline::after {
-        color: #404bbf;
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 4px;
-        bottom: -1px;
-        left: 0;
-        border-radius: 2px;
-        background-color: #404bbf;
-    }
-
 }
 
 @media screen and (min-width: 1158px) {
@@ -322,9 +321,6 @@ button {
     margin-bottom: auto;
 }
 
-.contact-select {
-    margin-bottom: 48px;
-}
 
 .nav-link-select {
     display: flex;
@@ -346,6 +342,10 @@ button {
 .link-select:hover,
 .link-select:focus {
     color: #404bbf;
+}
+
+.contact-select {
+    margin-bottom: 48px;
 }
 
 .contact-list-select {
@@ -407,7 +407,7 @@ button {
     background-image: linear-gradient(to bottom,
             rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
-        url("../images/office-phone.png");
+        url("../images/dark-mob-bg-min.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -459,14 +459,26 @@ button {
         rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
+@media screen and (max-width: 767) and (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .main-theme {
+        background-image: linear-gradient(to bottom,
+                rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/dark-mob-bg@2-min.jpg");
+    }
+}
+
 @media screen and (min-width: 768px) {
     .main-theme {
         padding: 112px 0;
         background-image: linear-gradient(to bottom,
                 rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
-            url("../images/laptop-bg@2x.jpg");
+            url("../images/dark-tab-bg-min.jpg");
         max-width: 768px;
+
     }
 
     .main-title {
@@ -478,6 +490,19 @@ button {
     }
 }
 
+
+@media screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2),
+screen and (min-width: 768px) and (min-resolution: 192dpi),
+screen and (min-width: 768px) and (min-resolution: 2dppx) {
+    .main-theme {
+        background-image: linear-gradient(to bottom,
+                rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/dark-tab-bg@2-min.jpg");
+    }
+
+}
+
 @media screen and (min-width: 1158px) {
     .main-theme {
         padding: 188px 0;
@@ -486,6 +511,26 @@ button {
 
     .main-title {
         margin-bottom: 48px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .main-theme {
+        background-image: linear-gradient(to bottom,
+                rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/dark-desk-bg-min.jpg");
+    }
+}
+
+@media screen and (min-width: 1158px) and (min-device-pixel-ratio: 2),
+screen and (min-width: 1158px) and (min-resolution: 192dpi),
+screen and (min-width: 1158px) and (min-resolution: 2dppx) {
+    .main-theme {
+        background-image: linear-gradient(to bottom,
+                rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/dark-desk-bg-min@2.jpg");
     }
 }
 
