--- a/css/styles.css
+++ b/css/styles.css
@@ -344,6 +344,10 @@ button {
     color: #404bbf;
 }
 
+.link-select-sendw {
+    color: #404BBF;
+}
+
 .contact-select {
     margin-bottom: 48px;
 }
@@ -351,23 +355,32 @@ button {
 .contact-list-select {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 24px;
 }
 
-.mail-phone {
+.sendwich-phone,
+.sendwich-mail {
     display: block;
     font-weight: 500;
     font-size: 20px;
     font-style: normal;
     line-height: 120%;
     letter-spacing: 0.02em;
-    color: #434455;
+
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail-phone:hover,
-.mail-phone:focus {
+.sendwich-phone {
+    color: #4D5AE5;
+}
+
+.sendwich-mail {
+    color: #434455;
+}
+
+.sendwich-mail:hover,
+.sendwich-mail:focus {
     color: #404bbf;
 }
 
@@ -376,6 +389,7 @@ button {
     justify-content: flex-start;
     gap: 40px;
 }
+
 
 .link-icon-select {
     display: flex;
